fix: notes not showing in preview z-index adjust

--- a/scss/ckeditor/skins/tao/scss/inc/_mainui.scss
+++ b/scss/ckeditor/skins/tao/scss/inc/_mainui.scss
@@ -61,8 +61,7 @@ Special outer level classes used in this file:
 
   padding: 0;
   position: relative;
-  z-index: 10001;
-
+  z-index: 0;
 }
 
 /* Added to the outer boundary of the UI when in inline editing,
